# knife

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_ZH.md
package/debian/: pdf-knife.desktop
package/macos/: icon.icns
src/: CMakeLists.txt  assets.qrc  config.hpp.in  core.cpp  core.hpp  main.cpp  pdf.cpp  pdf.hpp
src/errors/: pdferror.hpp
src/i18n/: knife_zh_CN.ts
src/models/: combinePdf.cpp  combinePdf.hpp  language.cpp  language.hpp  pdf.cpp  pdf.hpp  splitPdf.cpp  splitPdf.hpp
src/persistence/: settings.cpp  settings.hpp
src/qmodels/: combine.cpp  combine.hpp  combineDelegate.cpp  combineDelegate.hpp  controlModel.hpp  split.cpp  split.hpp  splitDelegate.cpp  splitDelegate.hpp
src/utils/: util.cpp  util.hpp
src/widgets/: combine.cpp  combine.hpp  combineRange.cpp  combineRange.hpp  drop.cpp  drop.hpp  loading.cpp  loading.hpp  mainWindow.cpp  mainWindow.hpp  pdfTable.hpp  settingsDialog.cpp  settingsDialog.hpp  split.cpp  split.hpp  splitMode.cpp  splitMode.hpp
